--- a/calendar/src/build.gradle
+++ b/calendar/src/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'CalendarQuickstart'
+mainClassName = 'Calendar'
 sourceCompatibility = 11
 targetCompatibility = 11
 version = '1.0'
