--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -11,5 +11,9 @@ repositories {
 }
 
 dependencies {
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.X')
+    implementation('com.amazonaws:aws-java-sdk-core:1.9.13')
+    implementation('com.amazonaws:aws-java-sdk:1.9.13')
+    implementation('com.amazonaws:aws-java-sdk-dynamodb:1.9.13')
     compile 'com.google.code.gson:gson:2.8.0'
 }
