--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -1,3 +1,5 @@
+import java.sql.Driver
+
 plugins {
 	id 'org.springframework.boot' version '2.4.1'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
@@ -26,7 +28,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
-	implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.X')
+
 	compile 'com.amazonaws:aws-java-sdk-core:1.9.13'
 	compile 'com.amazonaws:aws-java-sdk:1.9.13'
 	compile 'com.amazonaws:aws-java-sdk-dynamodb:1.9.13'
