--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -8,12 +8,15 @@ version = '1.0'
 
 repositories {
     mavenCentral()
+    maven { url "http://repo.opensourceagility.com/release/" }
 }
 
 dependencies {
-    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.X')
-    implementation('com.amazonaws:aws-java-sdk-core:1.9.13')
-    implementation('com.amazonaws:aws-java-sdk:1.9.13')
-    implementation('com.amazonaws:aws-java-sdk-dynamodb:1.9.13')
+    implementation 'org.testng:testng:7.1.0'
+    compile 'com.amazonaws:aws-java-sdk:1.9.13'
+    compile 'com.amazonaws:aws-java-sdk-core:1.9.13'
+    compile 'com.amazonaws:aws-java-sdk-dynamodb:1.11.32'
+    compile 'org.springframework:spring-context:4.1.3.RELEASE'
+    compile 'org.springframework:spring-web:4.1.3.RELEASE'
     compile 'com.google.code.gson:gson:2.8.0'
 }
