--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'CalendarRequest'
+group = 'com.calendar'
+mainClassName = 'com.calendar.CalendarRequest'
 sourceCompatibility = 11
 targetCompatibility = 11
 version = '1.0'
