--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile 'com.amazonaws:aws-java-sdk-core:1.9.13'
 	compile 'com.amazonaws:aws-java-sdk:1.9.13'
 	compile 'com.amazonaws:aws-java-sdk-dynamodb:1.9.13'
+	compile project(':calendar')
 
 
 	testCompile group: 'junit', name: 'junit', version: '4.+'
