--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -20,4 +20,10 @@ dependencies {
     compile 'org.springframework:spring-context:4.1.3.RELEASE'
     compile 'org.springframework:spring-web:4.1.3.RELEASE'
     compile 'com.google.code.gson:gson:2.8.0'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
