--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -1,5 +1,9 @@
-apply plugin: 'java'
-apply plugin: 'application'
+plugins {
+    id 'org.springframework.boot' version '2.4.1'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
+    id 'application'
+}
 
 group = 'com.weather'
 mainClassName = 'Weather'
@@ -9,7 +13,6 @@ version = '1.0'
 
 repositories {
     mavenCentral()
-    maven { url "http://repo.opensourceagility.com/release/" }
 }
 
 dependencies {
@@ -22,8 +25,4 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
 }
