--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	compile 'com.amazonaws:aws-java-sdk:1.9.13'
 	compile 'com.amazonaws:aws-java-sdk-dynamodb:1.9.13'
 	compile project(':calendar')
+	compile project(':weather')
 
 
 	testCompile group: 'junit', name: 'junit', version: '4.+'
