--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -41,3 +41,9 @@ test {
 	useJUnitPlatform()
 	testLogging.showStandardStreams = true
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.nautilus.NautilusApplication'
+	}
+}
