--- a/stocks/build.gradle
+++ b/stocks/build.gradle
@@ -1,49 +1,18 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.1'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
-	id 'application'
+    id 'java'
 }
 
-group = 'com.nautilus'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-mainClassName = 'com.nautilus.NautilusApplication'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
+version 'unspecified'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
-
-	compile 'com.amazonaws:aws-java-sdk-core:1.9.13'
-	compile 'com.amazonaws:aws-java-sdk:1.9.13'
-	compile 'com.amazonaws:aws-java-sdk-dynamodb:1.9.13'
-	compile project(':calendar')
-	compile project(':weather')
-
-	testCompile group: 'junit', name: 'junit', version: '4.+'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
-
 
 test {
-	useJUnitPlatform()
-	testLogging.showStandardStreams = true
-}
-
-jar {
-	manifest {
-		attributes 'Main-Class': 'com.nautilus.NautilusApplication'
-	}
+    useJUnitPlatform()
 }
