--- a/stocks/build.gradle
+++ b/stocks/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'java'
 }
 
+group = 'com.stocks'
+sourceCompatibility = 11
+targetCompatibility = 11
+version = '1.0'
+
 version 'unspecified'
 
 repositories {
