--- a/stocks/build.gradle
+++ b/stocks/build.gradle
@@ -14,8 +14,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    implementation 'org.testng:testng:7.1.0'
+    compile 'org.springframework:spring-context:4.1.3.RELEASE'
+    compile 'org.springframework:spring-web:4.1.3.RELEASE'
+    compile 'com.google.code.gson:gson:2.8.0'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 test {
