--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'joda-time:joda-time:2.10.10'
 }
