--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.nautilus'
-version = '0.0.1-SNAPSHOT'
+version = '2.1.1'
 sourceCompatibility = '11'
 mainClassName = 'com.nautilus.NautilusApplication'
 
